examples/test/testpolicy9786.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9786
  namespace: namespace84
spec:
  podSelector:
    matchLabels:
      key33: value3
      key47: value4
      key15: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value47
          key39: value31
          key33: value48
      podSelector:
        matchLabels:
          key48: value9
          key46: value31
          key36: value0
